demo/index.css
:root {
  --primary-color: #333;
  --secondary-color: #666;
  --dark-color: #999;

  --background: #fcfcfc;
  --link: #35a;
  --link-hover: #57c;
  --button-bg: #fff;
  --button-hover-bg: #f8f8f8;
  --button-active-bg: #e8e8e8;
  --button-color: #333;
  --border: rgba(0, 0, 0, 0.2);

  --textarea-bg: #fff;
  --textarea-readonly-bg: #f6f6f6;
  --textarea-focused: #69f;

  --error-bg: #fec;
  --error-color: #c00;
}

body {
  background: var(--background);
  box-sizing: border-box;
  color: var(--primary-color);
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 25px;
  padding: 0;
  font-size: 16px;
  line-height: 1.25;
}

a {
  text-decoration: none;
  color: var(--link);
}

a:hover {
  color: var(--link-hover);
}

a:not(.button) {
  transition: color linear 0.2s;
}

/* Button */
.button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  align-items: center;
  background: var(--button-bg);
  border-radius: 5px;
  border: 1px solid var(--border);
  box-sizing: border-box;
  color: var(--button-color);
  cursor: pointer;
  display: flex;
  font-size: 15px;
  height: 30px;
  justify-content: center;
  overflow: hidden;
  padding: 0 20px;
  transition: background-color linear 0.15s, box-shadow linear 0.15s;
  user-select: none;
}

.button:hover {
  background: var(--button-hover-bg);
  box-shadow: 0 1px 3px rgba(128, 128, 128, 0.25);
}

.button:hover:active {
  background: var(--button-active-bg);
  box-shadow: 0 1px 6px rgba(128, 128, 128, 0.35);
  transition: none;
}

.button.disabled {
  pointer-events: none;
  opacity: 0.4;
}

.button > span {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
}

.button > img {
  padding: 0 5px;
}

.button > img:first-child {
  padding-left: 0;
}

.button > img:last-child {
  padding-right: 0;
}

/* Select */
select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: var(--button-bg)
    url('https://icongr.am/entypo/chevron-down.svg?color=333333') no-repeat
    right 5px top 5px;
  background-size: 20px 20px;
  border-radius: 5px;
  border: 1px solid var(--border);
  box-sizing: border-box;
  color: var(--button-color);
  cursor: pointer;
  font-size: 15px;
  height: 30px;
  line-height: 29px;
  padding: 0 30px 0 10px;
  transition: box-shadow linear 0.15s;
}

select:hover {
  box-shadow: 0 1px 3px rgba(128, 128, 128, 0.25);
}

/* Header */
header {
  align-items: center;
  display: flex;
  height: 60px;
}

header > aside {
  padding-left: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

h1 {
  flex: 1;
  font-size: 35px;
  height: 60px;
  line-height: 60px;
  margin: 0;
  overflow: hidden;
}

h1 > small {
  color: var(--secondary-color);
  font-size: 15px;
}

h2 {
  color: var(--secondary-color);
  font-size: 20px;
  line-height: 30px;
  margin: 0;
  padding-bottom: 10px;
}

/* Main */
main {
  align-items: center;
  bottom: 100px;
  display: flex;
  left: 25px;
  position: absolute;
  right: 25px;
  top: 110px;
}

main > section {
  display: flex;
  flex-direction: column;
  flex: 1;
  height: 100%;
}

main > img {
  margin: 0 10px;
}

#jsx,
#json {
  border-radius: 3px;
  border: 1px solid var(--border);
  flex: 1;
  font-size: 16px;
  padding: 20px;
  outline: 0;
  transition: border-color linear 0.15s;
}

#jsx {
  position: relative;
  background: var(--textarea-bg) url('./loading.svg') no-repeat center center;
  background-size: 64px 64px;
}

#json {
  background: var(--textarea-readonly-bg);
  color: var(--secondary-color);
  resize: none;
}

#json:focus {
  border: 1px solid var(--textarea-focused);
}

#jsx > .CodeMirror {
  border-radius: inherit;
  border: inherit;
  bottom: -1px;
  cursor: text;
  height: auto;
  left: -1px;
  position: absolute;
  right: -1px;
  top: -1px;
  transition: inherit;
}

#jsx > .CodeMirror.CodeMirror-focused {
  border: 1px solid var(--textarea-focused);
}

#jsx > .CodeMirror .CodeMirror-lines {
  padding: 20px;
}

#error {
  align-items: flex-start;
  background: var(--error-bg);
  border-radius: 5px;
  color: var(--error-color);
  display: flex;
  font-size: 12px;
  height: 60px;
  margin-top: 20px;
  overflow: hidden;
  overflow-y: auto;
}

#error.hide {
  display: none;
}

#error > img {
  position: sticky;
  left: 10px;
  top: 10px;
  padding-right: 10px;
}

#errorDetails {
  flex: 1;
  margin: 0;
  padding: 7px;
  white-space: pre-line;
}

#jsx > .CodeMirror,
#json,
.CodeMirror-hints,
#errorDetails {
  font-family: 'Monaco', 'Courier New', Courier, monospace !important;
}

/* Footer */
footer {
  align-items: center;
  bottom: 25px;
  display: flex;
  height: 50px;
  left: 25px;
  position: absolute;
  right: 25px;
}

#notice {
  color: var(--dark-color);
  line-height: 20px;
  height: 20px;
}

#copyright {
  display: flex;
  line-height: 30px;
  height: 30px;
}

#copyright > p {
  color: var(--secondary-color);
  order: 1;
  padding-right: 1em;
  margin: 0;
}

#previewContainer {
  display: flex;
  flex: 1;
  justify-content: flex-end;
  order: 10;
  position: relative;
}

#preview {
  background: #262;
  color: #fff;
  height: 40px;
}

#preview:hover {
  background: #373;
}

#preview:hover:active {
  background: #151;
}

#examples {
  display: block;
  float: right;
  cursor: pointer;
}

#copy {
  float: right;
}

